<resources>
    <string name="app_name">Travel Smart to India</string>
    <string name="sban">V I D B</string>
    <string name="Button1">Sites of India</string>
    <string name="Button2">Convert Currency</string>
    <string name="sbB2">Convert USD to INR</string>
    <string name="Button3">City Guide</string>
    <string name="sbB3">Check on smart city guide</string>
    <string name="enterUSD"> Enter USD Amount</string>
    <string name="MainButton">Convert Currency</string>
    <string name="showINR"> Converted Amount</string>
    <string name="convertedINR"> INR </string>
    <string name="tvresult"> Amount In INR </string>
    <string name="Button4"> Play folk music</string>

    //City Guide
    <string name="ivCGDescription"> City Architecuture </string>

    //Music
    <string name="Pibare">Pibare Image</string>
    <string name="Raga">Raga Image</string>
    <string name="btPibare">PLAY PIBARE MUSIC</string>
    <string name="btRaga">PLAY RAGA MUSIC</string>
    <string name="btPibarePause">Pause Pibare Music</string>
    <string name="btRagaPause">Pause Raga Music</string>

    //CurrencyConverter
    <string name="hint">Enter Amount</string>
    <string name="rbUSDToINR">Convert USD to INR</string>
    <string name="rbINRToUSD">Convert INR to USD</string>
    <string name="btConvert">Convert Amount</string>
    <string name="ivcurrency"> INR USD Currency Cover </string>

    //Sites of India
    <string name="tvGoldenTemple"> Golden Temple </string>
    <string name="tvTajmahal"> Taj Mahal </string>
    <string name="tvRajasthan"> Rajasthan </string>
    <string name="tvTirupati"> Tirumala Tirupati </string>
    <string name="ivSOIDescription"> Indian Places Image </string>








</resources>